fixed whitespacing at edge

--- a/ncis/src/styles/Pubs.css
+++ b/ncis/src/styles/Pubs.css
@@ -2,7 +2,7 @@
     position: relative;
     margin-top: 0px;
     padding-top: 65px;
-    min-height: 60%;
+    min-height: 70vh;
     width: 100vw;
   
   }
@@ -17,9 +17,9 @@
     max-width: 101%;
     overflow-x: hidden;
     top: 0px;
-    -webkit-transform: rotate(-5deg) translateX(-50%)  translateY(-40%);
-    -ms-transform: rotate(-5deg) translateX(-50%)  translateY(-40%);
-    transform: rotate(-5deg) translateX(-50%) translateY(-40%);
+    -webkit-transform: rotate(-5deg) translateX(-50%)  translateY(-50%);
+    -ms-transform: rotate(-5deg) translateX(-50%)  translateY(-50%);
+    transform: rotate(-5deg) translateX(-50%) translateY(-50%);
     -webkit-transform-origin: center top;
     -ms-transform-origin: center top;
     transform-origin: center top;
@@ -46,21 +46,24 @@
   .pubs-container {
     z-index: 200;
     background-color: whitesmoke;
-    height: 60vh;
+    height: 80vh;
     padding-top: 15px;  /* how far heading down */
     padding-bottom: 30px;
+    padding-right: 150px;
     align-items: center;
     flex-direction: row;
     position: absolute;
-    transform: translateY(-90%);
-    width: 100%;
+    transform: translateY(-75%);
+    width: 80%;
+    margin: 10px;
   }
 
   @media (max-width: 800px) {
     .pubs-container {
-        transform: translateY(-120%);
-        height: 65vh;
+        transform: translateY(-90%);
+        height: 90vh;
     }
   }
+  
 
     
